...
            "state" : "translated",
            "value" : "日期"
          }
        }
      }
    },
    "Disconnect" : {

    },
    "Done" : {

    },
    "Downloaded" : {
...
