...
        }
      }
    },
    "Add Bookmark" : {

    },
    "All Books" : {

    },
    "Appearance" : {
      "comment" : "Settings select label for the interface style of the controls (light, dark, or default)",
      "extractionState" : "stale",
      "localizations" : {
...
            "state" : "translated",
            "value" : "外观"
          }
        }
      }
    },
    "Audiobookphile" : {

    },
    "Bookmark Title (Optional)" : {

    },
    "Bookmarks" : {
...
            "state" : "translated",
            "value" : "你好 [%@](https://skip.dev)"
          }
        }
      }
    },
    "Home" : {
      "comment" : "Tab bar item title for the Home tab",
      "extractionState" : "stale",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "Search" : {

    },
    "Search books..." : {

    },
    "Settings" : {
...
            "state" : "translated",
            "value" : "标题"
          }
        }
      }
    },
    "Title, Author, or Series" : {

    },
    "Total Time Listened" : {

    },
    "Try searching for something else" : {
...
